1. Completed 'Add Condition' page 2. Completed 'Manage Conditions' page

--- a/omod/src/main/webapp/resources/styles/conditions.css
+++ b/omod/src/main/webapp/resources/styles/conditions.css
@@ -7,7 +7,6 @@ form {
 }
 
 td {
-    max-width: 100px;
     text-overflow: ellipsis;
     overflow: hidden;
 }
@@ -47,7 +46,8 @@ form > div {
 
 .conditions-table {
     border: none;
-    width: 80%;
+    width: 100%;
+    margin-bottom: 20px;
 }
 
 ul#concept-and-date {
